# algoseek-task

./: Dockerfile  LICENSE  README.md  cli.py  pyproject.toml
cli/: __init__.py
config/: __init__.py
src/data/: __init__.py  error_fixer.py  error_identifier.py
src/utils/: __init__.py
src/wrapper/: wrapper.py
