[tool.poetry]
name = "algoseek-first-task"
version = "0.1.0"
description = ""
authors = ["Nikolaos Panagiotou <npan1990@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
click = "^8.1.1"
pandas = "1.3.0"
loguru = "^0.6.0"
tqdm = "^4.63.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
